<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/entry_point_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/home_page"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/entry_point_huhu"
        android:textSize="12dip"
        android:textColor="@color/color_entry_point_normal"
        android:drawableTop="@drawable/ic_huhu"/>
    <TextView
        android:id="@+id/friends"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/entry_point_friends"
        android:textSize="12dip"
        android:textColor="@color/color_entry_point_normal"
        android:drawableTop="@drawable/ic_huyixia"/>
    <TextView
        android:id="@+id/huhu_data"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/entry_point_huhu_data"
        android:textSize="12dip"
        android:textColor="@color/color_entry_point_normal"
        android:drawableTop="@drawable/ic_huhu_data"/>
    <TextView
        android:id="@+id/real_people_product"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/entry_point_real_people_product"
        android:textSize="12dip"
        android:textColor="@color/color_entry_point_normal"
        android:drawableTop="@drawable/ic_real_people_product"/>
    <TextView
        android:id="@+id/my_self"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/entry_point_me"
        android:textSize="12dip"
        android:textColor="@color/color_entry_point_normal"
        android:drawableTop="@drawable/ic_me"/>
</LinearLayout>
