<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/divider_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/my_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:background="@android:color/white"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/my_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/login_icon"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_gray_background"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/jiantou_right_dray"/>
        </RelativeLayout>

        <!--View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/-->

        <LinearLayout
            android:id="@+id/receive_address_manager"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:background="@android:color/white">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/receive_address_manager"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/jiantou_right_dray"/>
        </LinearLayout>

        <!--View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/-->

        <LinearLayout
            android:id="@+id/order_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:background="@android:color/white">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/waiting_payment"
                android:drawableTop="@drawable/ic_waiting_payment"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/waiting_for_delivery"
                android:drawableTop="@drawable/ic_waiting_for_delivery"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/waiting_receive_goods"
                android:drawableTop="@drawable/ic_wating_receive_goods"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/received_goods"
                android:drawableTop="@drawable/ic_received_goods"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/refund"
                android:drawableTop="@drawable/ic_refund"/>
        </LinearLayout>

        <!--View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/-->

        <LinearLayout
            android:id="@+id/about_me_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:background="@android:color/white">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/about_me"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/jiantou_right_dray"/>
        </LinearLayout>
        <!--View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/-->
    </LinearLayout>
</LinearLayout>
